# ChangeLog for sci-biology/biopython
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/biopython/ChangeLog,v 1.65 2011/06/23 14:55:47 hwoarang Exp $

  23 Jun 2011; Markos Chandras <hwoarang@gentoo.org> -biopython-1.56.ebuild:
  Remove old ebuilds. Requested by Arfrever

  28 May 2011; Brent Baude <ranger@gentoo.org> biopython-1.57.ebuild:
  Marking biopython-1.57 ppc for bug 365877

  24 May 2011; Markus Meier <maekke@gentoo.org> biopython-1.57.ebuild:
  x86 stable, bug #365877

  06 May 2011; Justin Lecher <jlec@gentoo.org> biopython-1.56.ebuild,
  biopython-1.57.ebuild:
  Cleaned DESCRIPTION

  05 May 2011; Markos Chandras <hwoarang@gentoo.org> biopython-1.57.ebuild:
  Stable on amd64 wrt bug #365877

*biopython-1.57 (03 Apr 2011)

  03 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +biopython-1.57.ebuild:
  Version bump.

  30 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -biopython-1.55.ebuild:
  Delete.

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> biopython-1.55.ebuild,
  biopython-1.56.ebuild:
  Drop alpha/sparc keywords

  15 Jan 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  biopython-1.56.ebuild:
  x86 stable wrt bug #351498

  14 Jan 2011; Brent Baude <ranger@gentoo.org> biopython-1.56.ebuild:
  stable ppc, bug 351498

  13 Jan 2011; Markos Chandras <hwoarang@gentoo.org> biopython-1.56.ebuild:
  Stable on amd64 wrt bug #351498

  06 Jan 2011; Brent Baude <ranger@gentoo.org> biopython-1.55.ebuild:
  Marking biopython-1.55 ppc for bug 341519

*biopython-1.56 (13 Dec 2010)

  13 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -biopython-1.53.ebuild, -biopython-1.54.ebuild, +biopython-1.56.ebuild:
  Version bump.

  31 Oct 2010; Raúl Porcel <armin76@gentoo.org> biopython-1.55.ebuild:
  alpha/sparc stable wrt #341519

  21 Oct 2010; Thomas Kahle <tomka@gentoo.org> biopython-1.55.ebuild:
  x86 stable per bug 341519
